// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: Input render component 1`] = `
<DocumentFragment>
  <div
    class="sc-ezrdKe hTnOjt"
  >
    <label
      class="sc-hBEYos iAuSGj"
    />
    <input
      class="sc-bYEvPH jcbMNy"
      value=""
    />
    <span
      class="sc-kLgntA iKbHJN"
    />
  </div>
</DocumentFragment>
`;

exports[`[Component]: Input render component with error style 1`] = `
<DocumentFragment>
  <div
    class="sc-ezrdKe hTnOjt"
  >
    <label
      class="sc-hBEYos iAuSGj"
    />
    <input
      class="sc-bYEvPH aOmjA"
      value=""
    />
    <span
      class="sc-kLgntA eyXmyp"
    >
      Help message
    </span>
  </div>
</DocumentFragment>
`;
